Fix sizing
Different changes.

Fixed the problem with resizing @ small browsers. Phone still looks bad.

--- a/styles.css
+++ b/styles.css
@@ -52,39 +52,41 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 16px;
-    max-width: 100%px;
+    gap: 0px;
     margin: 0 auto;
-    padding: 20px 10px;
     background-color: rgba(0, 0, 0, 0.811);
     background-image: url(andyone--WW8jBak7bo-unsplash.jpg);
     background-size: 100% 750px;
     background-repeat: no-repeat;
     background-blend-mode: multiply;
+    padding: 130px 0px 100px;
 }
 
 
 .image-of-me img {
-    width: 100%;
-    margin: 0 auto;
     max-width: 500px;
-    min-width: 300px;
-    margin-top: 50px;
-    margin-left: 200px;
-    margin-right: 200px;
+    min-width: 200px;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
     object-fit: cover;
     border: 1px solid black;
     border-radius: 50%;
+}
 
-   
+.image-of-me {
+    margin: 0 auto;
+    text-align: center; 
+
+    
+    
 }
 
 .info-about-me {
     margin: 0 auto;
-    width: 500px;
-    margin-top: 60px;
+    max-width: 640px;
+    min-width: 350px;
     text-align: center;
-    padding: 50px;
 
 }
 
@@ -123,7 +125,8 @@ ul {
 .bio {
     text-align: center;
     background-color: black;
-    padding: 100px;
+    padding: 100px 0;
+    width: 100%;
     
 }
 
@@ -148,6 +151,8 @@ ul {
 
 .project-title {
     font-size: 40px;
+    padding: 50px;
+    min-width: 300px;
     
 }
 
@@ -171,4 +176,14 @@ ul {
 .project-soon {
     text-align: center;
     padding: 100px;
+}
+
+@media(max-width:912px) {
+    .project {
+        grid-template-columns: 1fr;
+    }
+}
+
+h1 span {
+    display: block;
 }
